# web-actix-rust

./: README.md
webservice/: .env  Cargo.toml
webservice/src/: error.rs  routers.rs
webservice/src/dbaccess/: course.rs  teacher.rs
webservice/src/handlers/: course.rs  teacher.rs
webservice/src/models/: course.rs  teacher.rs
